--- a/projects/gibsojen/dominion/Makefile
+++ b/projects/gibsojen/dominion/Makefile
@@ -55,10 +55,12 @@ unittestresults: dominion.o
 	./unittest3 >> unittestresults.out
 	gcov kingdom_cards.c -f -b >> unittestresults.out
 	
-#	echo "unittest4.c:" >> tests.out
-#	gcc -o unittest4 compare.c bst.c unittest4.c $(CFLAGS)
-#	./unittest4 >> tests.out
-#	gcov bst.c >> tests.out
+	echo "------------------------------------------------------------------------------------------" >> unittestresults.out
+	echo "Result for running Unit 4 tests:" >> unittestresults.out
+	echo "unittest4.c:" >> unittestresults.out
+	gcc -o unittest4 -g unittest4.c dominion.o rngs.o kingdom_cards.o $(CFLAGS)
+	./unittest4 >> unittestresults.out
+	gcov kingdom_cards.c -f -b >> unittestresults.out
 	
 #	echo "unittest5.c:" >> tests.out
 #	gcc -o unittest5 compare.c bst.c unittest5.c $(CFLAGS)
