Finished all 3 random tests

--- a/projects/gibsojen/dominion/Makefile
+++ b/projects/gibsojen/dominion/Makefile
@@ -34,19 +34,21 @@ randomtestresults: dominion.o
 	echo "Results for random test 1:" > randomtestresults.out
 	echo "randomtestcard1.c:" >> randomtestresults.out
 	gcc -o randomtestcard1 -g randomtestcard1.c dominion.o rngs.o kingdom_cards.o $(CFLAGS)
-	#./randomtestcard1 >> randomtestresults.out
-	./randomtestcard1
+	./randomtestcard1 >> randomtestresults.out
+	#./randomtestcard1
 
 
 	echo "Results for random test 2:" >> randomtestresults.out
 	echo "randomtestcard2.c:" >> randomtestresults.out
 	gcc -o randomtestcard2 -g randomtestcard2.c dominion.o rngs.o kingdom_cards.o $(CFLAGS)
-	./randomtestcard2
+	./randomtestcard2 >> randomtestresults.out
+	#./randomtestcard2
 
 	echo "Results for random test 3:" >> randomtestresults.out
 	echo "randomtestcard3.c:" >> randomtestresults.out
 	gcc -o randomtestcard3 -g randomtestcard3.c dominion.o rngs.o kingdom_cards.o $(CFLAGS)
-	./randomtestcard3
+	./randomtestcard3 >> randomtestresults.out
+	#./randomtestcard3
 	gcov kingdom_cards.c -f -b >> randomtestresults.out
 
 clean:
